<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:mContext=".activities.JoinActivity">

    <EditText
        android:id="@+id/etJoinCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_join_background"
        android:backgroundTint="@color/white_20"
        android:ellipsize="start"
        android:gravity="center|start"
        android:hint="@string/enter_join_code_text"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="4"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="0dp"
        android:paddingBottom="8dp"
        android:singleLine="true"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white_70"
        app:layout_constraintEnd_toStartOf="@+id/btnJoin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnJoin"
        style="@style/AppTheme.Button.Highlighted.Join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_join_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnScan"
        style="@style/AppTheme.Button.Highlighted.Scan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_scan_text"
        app:layout_constraintEnd_toEndOf="@+id/btnJoin"
        app:layout_constraintStart_toStartOf="@+id/etJoinCode"
        app:layout_constraintTop_toBottomOf="@+id/btnJoin" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNearby"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/find_nearby_parties"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnScan" />
</androidx.constraintlayout.widget.ConstraintLayout>